--- a/01/vue-boilerplate/package.json
+++ b/01/vue-boilerplate/package.json
@@ -41,7 +41,9 @@
     },
     "rules": {
       "no-unused-vars": "off",
-      "no-empty-pattern": "off"
+      "no-empty": "off",
+      "no-empty-pattern": "off",
+      "no-unreachable": "off"
     }
   },
   "browserslist": [
