--- a/09/backend-main/.gitignore
+++ b/09/backend-main/.gitignore
@@ -143,3 +143,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+
+/src/main/resources/static
+/src/main/resources/templates
