--- a/09/backend-main/src/main/resources/application.properties
+++ b/09/backend-main/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
 spring.redis.password=
+
+spring.thymeleaf.prefix=classpath:/static/
