--- a/09/backend-main/src/main/resources/application.properties
+++ b/09/backend-main/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
 spring.redis.password=
 
-spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.prefix=classpath:/static
